--- a/src/assets/fonts/css/fontello-codes.scss
+++ b/src/assets/fonts/css/fontello-codes.scss
@@ -124,6 +124,7 @@
 .fa-mail:before { content: '\e87a'; } /* '' */
 .fa-ok:before { content: '\e87b'; } /* '' */
 .fa-hosp-net:before { content: '\e87c'; } /* '' */
+.fa-emo-coffee:before { content: '\e87d'; } /* '' */
 .fa-menu-1:before { content: '\f008'; } /* '' */
 .fa-link-ext:before { content: '\f08e'; } /* '' */
 .fa-copy:before { content: '\f0c5'; } /* '' */
