--- a/src/assets/fonts/css/fontello.scss
+++ b/src/assets/fonts/css/fontello.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?17822194');
-  src: url('../font/fontello.eot?17822194#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?17822194') format('woff2'),
-       url('../font/fontello.woff?17822194') format('woff'),
-       url('../font/fontello.ttf?17822194') format('truetype'),
-       url('../font/fontello.svg?17822194#fontello') format('svg');
+  src: url('../font/fontello.eot?22460999');
+  src: url('../font/fontello.eot?22460999#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?22460999') format('woff2'),
+       url('../font/fontello.woff?22460999') format('woff'),
+       url('../font/fontello.ttf?22460999') format('truetype'),
+       url('../font/fontello.svg?22460999#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?17822194#fontello') format('svg');
+    src: url('../font/fontello.svg?22460999#fontello') format('svg');
   }
 }
 */
@@ -180,6 +180,7 @@
 .fa-mail:before { content: '\e87a'; } /* '' */
 .fa-ok:before { content: '\e87b'; } /* '' */
 .fa-hosp-net:before { content: '\e87c'; } /* '' */
+.fa-emo-coffee:before { content: '\e87d'; } /* '' */
 .fa-menu-1:before { content: '\f008'; } /* '' */
 .fa-link-ext:before { content: '\f08e'; } /* '' */
 .fa-copy:before { content: '\f0c5'; } /* '' */
