add login and component RecentPage

--- a/src/styles/variables/_buefy.scss
+++ b/src/styles/variables/_buefy.scss
@@ -49,9 +49,9 @@ $red: #FF394C;
 
 $font-fir:    'PT Sans', sans-serif;
 $font-sec:    'Open Sans', sans-serif;
-$pri-color: #8282DB;
-$sec-color: #00c6d5;
-$secondary-color: #00C1B7;
+$pri-color: #662323;
+$sec-color: #EB5757;
+$secondary-color: #EB5757;
 
 // Color Picker
 $salmon: #FF93BA;
