--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -21,3 +21,7 @@ html, body, body .body-wrap, .app {
   overflow-y: auto;
   font-family: 'Arial Rounded MT Bold', 'Helvetica Rounded', Arial, sans-serif;
 }
+
+.is-rounded {
+  border-radius: 100%;
+}
